# tinyboot

./: .envrc  .git-blame-ignore-revs  .gitignore  Cargo.toml  LICENSE  Makefile  README.md  TODO.md  boards.nix  build.zig  build.zig.zon  build.zig.zon.nix  busybox.config  compress-firmware.nix  coreboot.nix  default.nix  deps.nix  flake.nix  flashrom-cros.nix  flashrom.nix  initramfs.nix  inittab  justfile  kernel.nix  libpayload.nix  linux.nix  module.nix  nixos-module.nix  options.nix  package.nix  qemu.nix  run.bash  run.nix  test.nix  test.p7  update-initramfs.nix  wolftpm.nix
.github/workflows/: build.yaml
boards/: aarch64-kernel.config  chromebook-kernel.config  default.nix  generic-kernel.config  mediatek-kernel.config  qcom-kernel.config  qemu-kernel.config  x86_64-kernel.config
boards/asurada-spherion/: config.nix  coreboot.config  layout.fmd
boards/brya-banshee/: README.md  config.nix  coreboot.config  layout.fmd
boards/clearfog-pro/: config.nix
boards/fizz-fizz/: config.nix  coreboot.config  kernel.config  layout.fmd
boards/kukui-fennel/: config.nix  layout.fmd
boards/kukui-jacuzzi-fennel/: config.nix  coreboot.config  layout.fmd
boards/octopus-meep/: README.md  config.nix  layout.fmd
boards/poppy-atlas/: config.nix  coreboot.config  kernel.config  layout.fmd
boards/qemu-aarch64/: config.nix  coreboot.config  kernel.config  layout.fmd
boards/qemu-x86/: config.nix  coreboot.config  extra-config.nix
boards/qemu-x86_64/: config.nix  coreboot.config  kernel.config  layout.fmd
boards/trogdor-wormdingler/: config.nix  coreboot.config  kernel.config  layout.fmd
boards/volteer-elemi/: README.md  config.nix  coreboot.config  extra-config.nix  layout.fmd
boot/: Cargo.toml
boot/src/: boot_loader.rs  booter.rs  grub.rs  lib.rs  syslinux.rs
boot/testdata/: extlinux.conf
configs/: arm64-linux.config  x86_64-linux.config
doc/: kernel-configuration.md  required.config
docs/: boot_flow.md
etc/: group  ima_policy.conf  ima_policy.conf.in  inittab  inittab.in  mdev.conf  passwd  rcS.in
etc/init.d/: rcS
examples/chromebook-asurada/: default.nix
examples/chromebook-kukui/: default.nix
examples/chromebook-trogdor/: default.nix
examples/chromebook-x86_64/: default.nix
examples/qemu-arm/: default.nix
extlinux/: Cargo.toml
fitimage/: default.nix  make-image-its.bash
grub/: Cargo.toml  README.md  TODO.md
inittab/: inittab
kernel-configs/: aarch64  aarch64.nix  alderlake  chromebook  chromebook.nix  debug  debug.nix  default.nix  generic  generic.nix  mediatek  network  network.nix  platform.nix  qcom  qemu  sc7180  tigerlake  video  video.nix  x86_64  x86_64.nix
keyutils-raw/: Cargo.toml  build.rs  wrapper.h
nixos/: default.nix
nologin/: Cargo.toml
patches/: coreboot-atf-loglevel.patch  coreboot-fitimage-memlayout.patch  flashrom-cros-no-powerd.patch  linux-tpm-probe.patch
pkgs/: arm-trusted-firmware-cros.nix  tinyboot.nix  zig-pkg-config-cross.patch
printk/: Cargo.toml
scripts/: install.bash  update.bash
src/: autoboot.zig  boot.zig  bootspec.zig  client.zig  config.zig  console.zig  cpio.zig  device.zig  fdt.zig  glob.zig  kobject.zig  linux.h  liveupdate.zig  log.zig  mbedtls.zig  message.zig  openssl.zig  pkcs7.zig  rtnetlink.zig  runner.zig  seat.zig  security.zig  server.zig  shell.zig  system.zig  tboot-bless-boot-generator.zig  tboot-bless-boot.zig  tboot-efi-stub.zig  tboot-initrd.zig  tboot-keygen.zig  tboot-keygen.zig.bak  tboot-loader.zig  tboot-nixos-install.zig  tboot-sign.zig  test.zig  test_key  tmp.zig  tmpdir.zig  utils.zig  vpd.zig  (+5 more)
tboot/: Cargo.toml
tboot-bless-boot/: Cargo.toml
tboot-bless-boot-generator/: Cargo.toml
tboot-init/: Cargo.toml
tboot-init/src/: block_device.rs  boot_loader.rs  cmd.rs  fs.rs  keys.rs  main.rs  message.rs  shell.rs
tboot-init/src/boot_loader/: mod.rs
tboot-install/: Cargo.toml
tboot-loader/: Cargo.toml
tboot-loader/src/: cmd.rs  fs.rs  kexec.rs  keys.rs  main.rs  shell.rs
tboot-loader/src/boot_loader/: disk.rs  mod.rs
tboot-nixos-install/: Cargo.toml
tboot-test/: Cargo.toml
tboot-update/: Cargo.toml
tboot/src/: block_device.rs  bls.rs  config.rs  dev.rs  lib.rs  linux.rs  log.rs  message.rs  nologin.rs  system.rs
tboot/src/boot_loader/: bls.rs  mod.rs
tbootbb/: Cargo.toml
tbootctl/: Cargo.toml  build.rs
tbootd/: Cargo.toml
tbootd/src/: block_device.rs  lib.rs  message.rs
tbootui/: Cargo.toml
tbootui/examples/: edit.rs
tbootui/src/: lib.rs
test/: bls.nix  default.nix  extlinux.nix  grub.nix  iso.nix  module.nix  run.bash  test.bash
tests/: kernel.nix  module.nix
tinyboot/: Cargo.toml  README.md  build.rs  default.nix  wrapper.h
tinyboot/grub/: Cargo.toml  TODO.md
tinyboot/grub/src/: eval.rs  lexer.rs  parser.rs  token.rs
tinyboot/grub/src/snapshots/: grub__lexer__tests__alpine_iso_example.snap  grub__lexer__tests__full_example.snap  grub__lexer__tests__nixos_iso_example.snap
tinyboot/grub/src/testdata/: grub-alpine.cfg
tinyboot/src/: boot_loader.rs  fs.rs  grub.rs  list.rs  main.rs  shell.rs  syslinux.rs  tpm.c  tpm.h  tpm.rs
tinyboot/src/boot/: boot_loader.rs  fs.rs  grub.rs  mod.rs  syslinux.rs  util.rs
tinyboot/tboot/: Cargo.toml
tinyboot/tboot/src/: block_device.rs  fs.rs  hash.rs  lib.rs  log.rs  message.rs  verified_boot.rs
tinyboot/tboot/src/boot_loader/: grub.rs  syslinux.rs
tinyboot/tbootbb/: Cargo.toml
tinyboot/tbootbb/src/: main.rs
tinyboot/tbootctl/: Cargo.toml  build.rs
tinyboot/tbootctl/src/: cli.rs  handlers.rs  lib.rs  main.rs
tinyboot/tbootd/: Cargo.toml  build.rs
tinyboot/tbootd/src/: block_device.rs  bls.rs  boot_loader.rs  device.rs  fs.rs  grub.rs  lib.rs  main.rs  message.rs  syslinux.rs  tpm.rs  verify.rs
tinyboot/tbootmon/: Cargo.toml
tinyboot/tbootui/: Cargo.toml
tinyboot/tbootui/examples/: edit.rs
tinyboot/tbootui/src/: lib.rs  main.rs
tinyboot/testdata/: grubenv
tinyboot/tinyboot/: Cargo.toml  build.rs
tinyboot/tinyboot/src/: bls.rs  boot_loader.rs  fs.rs  grub.rs  main.rs  syslinux.rs  tpm.rs  verify.rs
tinyboot/tinyboot/src/testdata/: grubenv
(+109 files in other folders)
