[workspace]
resolver = "2"
members = ["tboot", "tboot-loader", "tboot-nixos-install"]

# optimize release builds for size (see https://github.com/johnthagen/min-sized-rust)
[profile.release]
lto = true
opt-level = "z"
codegen-units = 1

[workspace.dependencies]
log = "0.4.20"
nix = { default-features = false, version = "0.27.1", features = [ "mount", "fs", "user" ] }
tboot = { path = "./tboot" }
