[package]
name = "tboot-init"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow.workspace = true
bytes = { default-features = false, version = "1.5.0" }
kobject-uevent = "0.1.0"
log.workspace = true
netlink-sys = "0.8.5"
nix.workspace = true
raw_sync.workspace = true
rustyline.workspace = true
shared_memory.workspace = true
syscalls = { features = ["std"], default-features = false, version = "0.6.15" }
tboot.workspace = true
textwrap.workspace = true
