[package]
name = "tboot-loader"
version = "0.1.0"
edition = "2021"

[features]
coreboot = []
fw_cfg = []

[dependencies]
anyhow = "1.0.75"
gpt = "3.1.0"
log.workspace = true
nix.workspace = true
rustyline = { default-features = false, version = "12.0.0", features = [ "with-file-history" ] }
syscalls = { features = ["std"], default-features = false, version = "0.6.15" }
tboot.workspace = true
textwrap = { default-features = false, version = "0.16.0" }
uuid = { default-features = false, version = "1.5.0" }
