[package]
name = "tboot-loader"
version = "0.1.0"
edition = "2021"

[features]
coreboot = []
fw_cfg = []

[dependencies]
anyhow = "1.0.75"
base64 = "0.21.5"
gpt = "3.1.0"
log.workspace = true
nix.workspace = true
syscalls = { features = ["std"], default-features = false, version = "0.6.15" }
tboot.workspace = true
