[package]
name = "tboot"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow.workspace = true
clap.workspace = true
futures.workspace = true
log.workspace = true
nix.workspace = true
thiserror.workspace = true
tokio-serde-cbor.workspace = true
tokio-util.workspace = true
tokio.workspace = true
crc = "3.0.1"
fern = "0.6.2"
grub = { path = "../grub" }
kobject-uevent = "0.1.0"
serde = { version = "1.0.185", features = ["derive"], default-features = false }
serde_cbor = { default-features = false, version = "0.11.2" }
uuid = { default-features = false, version = "1.4.1" }
