[package]
name = "tboot"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow.workspace = true
crc = "3.0.1"
fern = "0.6.2"
futures.workspace = true
kobject-uevent = "0.1.0"
log.workspace = true
nix.workspace = true
serde = { version = "1.0.188", features = ["derive"], default-features = false }
serde_cbor = { default-features = false, version = "0.11.2" }
thiserror.workspace = true
tokio-serde-cbor.workspace = true
tokio-util.workspace = true
tokio.workspace = true
uuid = { default-features = false, version = "1.4.1" }
