[package]
name = "tbootd"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow.workspace = true
clap.workspace = true
futures.workspace = true
log.workspace = true
nix.workspace = true
tboot.workspace = true
thiserror.workspace = true
tokio-serde-cbor.workspace = true
tokio-util.workspace = true
tokio.workspace = true
bytes = { default-features = false, version = "1.5.0" }
kobject-uevent = "0.1.0"
netlink-sys = "0.8.5"
syscalls = { features = ["std"], default-features = false, version = "0.6.14" }
