[package]
name = "tbootui"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow.workspace = true
futures.workspace = true
log.workspace = true
nix.workspace = true
ratatui = { version = "0.23.0", default-features = false, features = [ "termion" ] }
tboot.workspace = true
termion = "2.0.1"
tokio-serde-cbor.workspace = true
tokio-util.workspace = true
tokio.workspace = true
