[package]
name = "tinyboot"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.70"
clap = { version = "4.2.1", default-features = false, features = [
  "std",
  "derive",
] }
fern = "0.6.2"
grub = { path = "../grub" }
log = "0.4.17"
nix = "0.26.2"
syscalls = "0.6.9"
termion = "2.0.1"
uuid = "1.3.0"
