[package]
name = "tinyboot"
version = "0.1.0"
edition = "2021"

[features]
default = ["measured-boot"]
measured-boot = []

[dependencies]
anyhow = "1.0.70"
clap = { version = "4.2.4", default-features = false, features = [
  "std",
  "derive",
] }
fern = "0.6.2"
grub = { path = "../grub" }
log = "0.4.17"
nix = "0.26.2"
sha256 = "1.1.3"
syscalls = "0.6.10"
termion = "2.0.1"
uuid = "1.3.1"

[build-dependencies]
bindgen = { version = "0.65.1" }
cc = "1.0.79"
