[workspace]
members = ["tbootbb", "tbootd", "tbootctl", "tbootui", "tboot", "grub"]

# optimize release builds for size (see https://github.com/johnthagen/min-sized-rust)
[profile.release]
strip = true
lto = true
opt-level = "z"
codegen-units = 1

[workspace.dependencies]
anyhow = { default-features = false, version = "1.0.72" }
tboot = { path = "./tboot" }
clap = { version = "4.3.21", features = [
  "std",
  "help",
  "derive",
], default-features = false }
futures = { features = ["std"], default-features = false, version = "0.3.28" }
log = "0.4.20"
nix = { default-features = false, version = "0.26.2", features = [
  "mount",
  "fs",
  "user",
] }
tokio = { version = "1.31.0", default-features = false, features = [
  "rt-multi-thread",
  "macros",
  "time",
  "fs",
  "net",
] }
thiserror = "1.0.44"
tokio-serde-cbor = "0.7.0"
tokio-util = "0.7.8"
