[package]
name = "tboot"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dev-dependencies]
mktemp = "0.5.0"

[dependencies]
ed25519-dalek = { version = "2.0.0-rc.2", features = [
  "alloc",
  "pem",
  "batch",
  "digest",
] }
fern = "0.6.2"
log = "0.4.18"
sha2 = "0.10.6"
thiserror = "1.0.40"
