[package]
name = "tboot"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dev-dependencies]
mktemp = "0.5.0"

[dependencies]
anyhow = "1.0.71"
clap = { version = "4.3.2", features = ["derive"] }
crc = "3.0.1"
ed25519-dalek = { version = "2.0.0-rc.2", features = [
  "alloc",
  "pem",
  "batch",
  "digest",
] }
fern = "0.6.2"
futures = "0.3.28"
grub = { path = "../grub" }
kobject-uevent = "0.1.0"
log = "0.4.18"
nix = "0.26.2"
serde = { version = "1.0.163", features = ["derive"] }
serde_cbor = "0.10"
sha2 = "0.10.6"
thiserror = "1.0.40"
tokio = { version = "1.28.2", features = ["full"] }
tokio-serde-cbor = "0.7.0"
tokio-util = "0.7.8"
uuid = "~1.2"
