[package]
name = "tboot"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
anyhow = "1.0.71"
clap = { version = "4.3.10", features = ["derive"] }
crc = "3.0.1"
fern = "0.6.2"
futures = "0.3.28"
grub = { path = "../grub" }
kobject-uevent = "0.1.0"
log = "0.4.19"
nix = "0.26.2"
serde = { version = "1.0.164", features = ["derive"] }
serde_cbor = "0.11.2"
thiserror = "1.0.40"
tokio = { version = "1.29.1", features = ["full"] }
tokio-serde-cbor = "0.7.0"
tokio-util = "0.7.8"
uuid = "1.4.0"
