[package]
name = "tbootd"
version = "0.1.0"
edition = "2021"

[features]
default = []
measured-boot = []
verified-boot = []

[build-dependencies]
bindgen = { version = "0.65.1" }

[dependencies]
anyhow = "1.0.71"
bytes = "1.4.0"
clap = { version = "4.3.3", features = ["derive"] }
futures = "0.3.28"
hex = "0.4.3"
kobject-uevent = "0.1.0"
log = "0.4.18"
netlink-sys = { version = "0.8.5" }
nix = "0.26.2"
sha2 = "0.10.6"
syscalls = "0.6.12"
tboot = { path = "../tboot" }
thiserror = "1.0.40"
tokio = { version = "1.28.2", features = ["full"] }
tokio-serde-cbor = "0.7.0"
tokio-util = "0.7.8"
