[package]
name = "tbootui"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.71"
kobject-uevent = "0.1.0"
log = "0.4.18"
# don't use libudev
serialport = { version = "4.2.1", default-features = false }
tboot = { path = "../tboot" }
