[package]
name = "tbootui"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.71"
futures = "0.3.28"
log = "0.4.18"
nix = "0.26.2"
ratatui = { version = "0.21.0", default-features = false, features = [
  "termion",
] }
tboot = { path = "../tboot" }
termion = "2.0.1"
tokio = { version = "1.28.2", features = ["full"] }
tokio-serde-cbor = "0.7.0"
tokio-util = "0.7.8"
