[package]
name = "tbootui"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = { default-features = false, version = "1.0.72" }
futures = { default-features = false, version = "0.3.28" }
log = "0.4.19"
nix = { default-features = false, version = "0.26.2" }
ratatui = { version = "0.22.0", default-features = false, features = [
  "termion",
] }
tboot = { path = "../tboot" }
termion = "2.0.1"
termios = "0.3.3"
tokio = { version = "1.29.1", default-features = false, features = [
  "rt-multi-thread",
  "macros",
] }
tokio-serde-cbor = "0.7.0"
tokio-util = "0.7.8"
