[package]
name = "tinyboot"
version = "0.1.0"
edition = "2021"

[features]
default = []
measured-boot = []
verified-boot = []

[dependencies]
anyhow = "1.0.71"
clap = { version = "4.2.7", features = ["derive"] }
ed25519-dalek = "1.0.1"
fern = "0.6.2"
grub = { path = "../grub" }
log = "0.4.17"
nix = "0.26.2"
sha256 = "1.1.3"
syscalls = "0.6.10"
termion = "2.0.1"
uuid = "1.3.2"

[build-dependencies]
bindgen = { version = "0.65.1" }
